--- a/Quantum Analyzer/Resource/QMAnalyzer_1/量子检测综合报告单_1.htm
+++ b/Quantum Analyzer/Resource/QMAnalyzer_1/量子检测综合报告单_1.htm
@@ -1,15 +1,40 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML><head><meta name="viewport"           content="width=320, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"><META content="IE=5.0000" http-equiv="X-UA-Compatible">
-<TITLE>量子检测综合报告单</title>
+<HTML><HEAD><META content="IE=5.0000" http-equiv="X-UA-Compatible">
+<TITLE>量子检测综合报告单</TITLE>
 <META content="text/html; charset=utf-8" http-equiv=Content-Type ;>
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+  <script>
+    (function (doc, win) {
+      var docEl = doc.documentElement,
+              resizeEvt = 'orientationchange' in win ? 'orientationchange' : 'resize',
+              recalc = function () {
+                var clientWidth = docEl.clientWidth;
+                if (!clientWidth) return;
+                docEl.style.fontSize = (clientWidth >= 640 ? 100 : clientWidth / 6.4) + 'px';
+              };
+
+      if (!doc.addEventListener) return;
+      win.addEventListener(resizeEvt, recalc, false);
+      doc.addEventListener('DOMContentLoaded', recalc, false);
+    })(document, window);
+  </script>
 <STYLE>.title {
-	FONT-SIZE: 18px; FONT-FAMILY: "黑体"
+	FONT-SIZE: 0.18rem; FONT-FAMILY: "黑体";
+}
+font{
+  font-size: 0.35rem;
+  font-weight: 600;
+}
+font strong{
+    font-size: 0.22rem;
+    font-weight: 600;
 }
 TD {
-	FONT-SIZE: 11pt
+	FONT-SIZE: 0.11rem;
 }
 .small {
-	FONT-SIZE: 9pt
+	FONT-SIZE: 0.09rem;
 }
 A:link {
 	TEXT-DECORATION: none; COLOR: #000000
@@ -24,13 +49,13 @@ A:hover {
 	BORDER-TOP: #000000 1px solid; BORDER-RIGHT: #000000 0px; BORDER-BOTTOM: #000000 0px; BORDER-LEFT: #000000 1px solid
 }
 .td {
-	FONT-SIZE: 14px; BORDER-TOP: #ffffff 0px; BORDER-RIGHT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid; BORDER-LEFT: #ffffff 0px
+	FONT-SIZE: 0.14rem; BORDER-TOP: #ffffff 0px; BORDER-RIGHT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid; BORDER-LEFT: #ffffff 0px
 }
 .td2 {
-	FONT-SIZE: 14px; BORDER-TOP: #ffffff 0px; BORDER-RIGHT: #ffffff 0px; BORDER-BOTTOM: #000000 1px solid; BORDER-LEFT: #ffffff 0px
+	FONT-SIZE: 0.14rem; BORDER-TOP: #ffffff 0px; BORDER-RIGHT: #ffffff 0px; BORDER-BOTTOM: #000000 1px solid; BORDER-LEFT: #ffffff 0px
 }
 .NOPRINT {
-	FONT-SIZE: 9pt; FONT-FAMILY: "宋体"
+	FONT-SIZE: 0.09rem; FONT-FAMILY: "宋体"
 }
 .wtable {
 	BORDER-TOP: #000000 1px solid; BORDER-RIGHT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid; BORDER-LEFT: #000000 1px solid
@@ -53,11 +78,20 @@ A:hover {
 .xtable {
 	BORDER-TOP: #ffffff 0px; BORDER-RIGHT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid; BORDER-LEFT: #000000 1px solid
 }
+  table{
+    width: 5.9rem;
+  }
+  .bigTable{
+    width: 6rem;
+  }
+.detail {
+    width: 2.5rem;
+}
 </STYLE>
 
-<META name=GENERATOR content="MSHTML 11.00.10586.420"> <link rel="stylesheet" href="health.css"></head>
+<META name=GENERATOR content="MSHTML 11.00.10586.420"></HEAD>
 <BODY style="BACKGROUND: url(bgimage.gif) center 50%">
-<TABLE cellSpacing=4 cellPadding=0 width=600 align=center border=0>
+<TABLE cellSpacing=4 cellPadding=0 class="bigTable" align=center border=0>
   <TBODY>
   <TR>
     <TD colSpan=3 align=center><FONT size=6 face=黑体>量子检测综合报告单</FONT></TD></TR>
@@ -83,23 +117,21 @@ A:hover {
       <HR color=#ff9933 SIZE=2>
     </TD></TR></TBODY></TABLE>
 
-<div class="dataLine">
-  <ul id="content"></ul>
-</div>
+  {{table}}
   
-<TABLE cellSpacing=0 cellPadding=0 width=590 align=center border=0>
+<TABLE cellSpacing=0 cellPadding=0  align=center border=0>
   <TBODY>
   <TR>
     <TD height=12></TD></TR></TBODY></TABLE>
-<TABLE cellSpacing=0 cellPadding=0 width=600 align=center border=0>
+<TABLE cellSpacing=0 cellPadding=0 class="bigTable" align=center border=0>
   <TBODY>
   <TR>
     <TD>
       <HR color=#ff9933 SIZE=2>
     </TD></TR></TBODY></TABLE>
-<TABLE cellSpacing=0 cellPadding=0 width=590 align=center border=0>
+<TABLE cellSpacing=0 cellPadding=0  align=center border=0>
   <TBODY>
   <TR height=5>
     <TD></TD></TR>
   <TR align=right>
-    <TD colSpan=2>本检测结果仅供参考，不作为诊断结论。</TD></TR></TBODY></TABLE><script>         var data = [              {{table}}         ] </script><script src="health.js"></script></body></HTML>
+    <TD colSpan=2>本检测结果仅供参考，不作为诊断结论。</TD></TR></TBODY></TABLE></BODY></HTML>
