修复量子为JLZ

--- a/Quantum Analyzer/Resource/QMAnalyzer_1/JLZ检测综合报告单.htm
+++ b/Quantum Analyzer/Resource/QMAnalyzer_1/JLZ检测综合报告单.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>量子检测综合报告单</title>
+    <title>JLZ检测综合报告单</title>
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <script>
@@ -332,7 +332,7 @@
 <TABLE cellSpacing=4 cellPadding=0 align=center border=0 class="bigTable">
     <TBODY>
     <TR>
-        <TD colSpan=3 align=center><FONT size=6 face=黑体>量子检测综合报告单</FONT></TD>
+        <TD colSpan=3 align=center><FONT size=6 face=黑体>JLZ检测综合报告单</FONT></TD>
     </TR>
     <TR>
         <TD width="100%" colSpan=3>
