--- a/Quantum Analyzer/Resource/QMAnalyzer_1/过敏检测报告.htm
+++ b/Quantum Analyzer/Resource/QMAnalyzer_1/过敏检测报告.htm
@@ -114,7 +114,7 @@
 <div id="box"></div>
 <table cellSpacing=4 cellPadding=0 width=620 align=Center border=0>
     <tr>
-        <td align=middle colspan=3><font size=6 face=黑体><p>量子弱磁检测(过敏检测报告)</p>
+        <td align=middle colspan=3><font size=6 face=黑体><p>JLZ弱磁检测(过敏检测报告)</p>
             <p>分析报告单</p></font></td>
     </tr>
     <tr>
