--- a/Quantum Analyzer/Resource/QMAnalyzer_1/量子弱磁综合报告单.htm
+++ b/Quantum Analyzer/Resource/QMAnalyzer_1/量子弱磁综合报告单.htm
@@ -114,7 +114,7 @@
 <div id="box"></div>
 <table cellSpacing=4 cellPadding=0 width=620 align=Center border=0>
     <tr>
-        <td align=middle colspan=3><font size=6 face=黑体>JLZ弱磁综合报告单</font></td>
+        <td align=middle colspan=3><font size=6 face=黑体>JLZ综合报告单</font></td>
     </tr>
     <tr>
         <td width=100% colspan=3>
